--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "scripts": {
-    "build": "yarn run bundle ; yarn run uglify",
-    "bundle": "node scripts/bundler",
-    "uglify": "uglifyjs --compress --mangle --output bundle.min.js -- bundle.js"
-  },
+  "name": "game",
+  "version": "0.0.0",
+  "description": "A short description for your game.",
+  "main": "index.js",
+  "repository": "git@github.com:dxu/tic80-js-starter.git",
+  "author": "David <xudavidb@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "module-concat": "^2.3.0",
     "uglify-js": "^3.4.9"
+  },
+  "scripts": {
+    "build": "yarn run bundle ; yarn run uglify ; node scripts/builder",
+    "bundle": "node scripts/bundler",
+    "uglify": "uglifyjs build/bundle.js --output build/bundle.min.js -m -c negate_iife=false"
   }
 }
